# simple-aggregator

./: .gitignore  CMakeLists.txt  README.md  Readme.md
include/: .gitignore  newsdisplay.h  newsfetcher.h  newsfilter.h  newsitem.h  utils.h
src/: main.cpp  newsdisplay.cpp  newsfetcher.cpp  newsfilter.cpp  newsitem.cpp  utils.cpp
